    * 0375 FIX: LDAP: Now handling user-ids with umlauts...
    * 0246 FIX: brocade_fcport: fixed error in pnp-template...
    * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
    * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
    * 0436 FIX: Fix broken Site status switching via sidebar snapin...

    WATO:
    * 0308 Multisite can now set rotation view permissions for NagVis...
    * 0329 Removed Distributed WATO peer mode...
            NOTE: Please refer to the migration notes!
    * 0244 New features for WATO page Backup & Restore...
    * 0382 Active HTTP check now supports multiline regexp matching...
    * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
    * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
    * 0019 FIX: Fixed wording in WATO rule for MSSQL check
    * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
    * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
    * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...
    * 0330 FIX: Improved performance of WATO slave push with a large user base...
    * 0331 FIX: LDAP diagnostic LOG can now have the $OMD_SITE$ macro configured via WATO...
    * 0332 FIX: Own host tag groups without topics resulted in two groups "Host tags" in the rule editor
    * 0361 FIX: The page linked by "new rule" can now be bookmarked again
    * 0341 FIX: Avoid rare exception in WATO when deleting a host...
    * 0376 FIX: LDAP: Default configuration of attributes is reflected within WATO now
    * 0346 FIX: Fix folder visibility in WATO for unpriviledged users...
    * 0385 FIX: Better error handling for invalid service regex in rule conditions...
    * 0389 FIX: Showing LDAP settings on site specific global settings page now...