@@ -94,6 +94,7 @@
     * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
     * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
     * 0436 FIX: Fix broken Site status switching via sidebar snapin...
+    * 0420 FIX: LDAP: Roles/Groups are now synced even if case of DNs do not match...
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
